css fix overflow

--- a/skedge-frontend/src/styles/UserPage.css
+++ b/skedge-frontend/src/styles/UserPage.css
@@ -74,6 +74,12 @@ h5 {
   width: 350px;
   height: 400px;
   margin: auto;
+}
+
+.semesters{
+  width: 350px;
+  height: 350px;
+  margin: auto;
   overflow-y: auto;
 }
 
